Add support for data direct libraries for JDBC
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31033 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -88,6 +88,12 @@
         <dependency org="org.apache.tomcat" name="catalina" rev="6.0.35" force="true" conf="core"/>
         <dependency org="org.apache.tomcat" name="coyote" rev="6.0.35" force="true" conf="core"/>
 
+        <!-- Progress Data Direct JDBC Drivers -->
+        <dependency org="com.l7tech.ddtek" name="L7db2" rev="4.2.1" force="true" conf="core"/>
+        <dependency org="com.l7tech.ddtek" name="L7mysql" rev="4.2.1" force="true" conf="core"/>
+        <dependency org="com.l7tech.ddtek" name="L7oracle" rev="4.2.1" force="true" conf="core"/>
+        <dependency org="com.l7tech.ddtek" name="L7sqlserver" rev="4.2.1" force="true" conf="core"/>
+
         <!-- Optional dependencies -->
         <dependency org="com.ibm.mq" name="mq6" rev="6.0.2.11" force="true" conf="optional"/>
         <dependency org="com.tarari" name="tarari-raxj" rev="4.4.3.31" force="true" conf="optional"/>
