--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1755,7 +1755,7 @@ jdbcConnection.pooling.minPoolSize.defaultValue.clusterProperty=jdbcConnection.p
 jdbcConnection.pooling.minPoolSize.defaultValue.validation.type=integer
 
 jdbcConnection.driverClass.defaultList.description=The default list of supported database driver classes (a list of driver classes; default com.mysql.jdbc.Driver).  Each driver class is separated by a new line character.
-jdbcConnection.driverClass.defaultList.default=com.mysql.jdbc.Driver
+jdbcConnection.driverClass.defaultList.default=com.mysql.jdbc.Driver\ncom.l7tech.jdbc.mysql.MySQLDriver\ncom.l7tech.jdbc.db2.DB2Driver\ncom.l7tech.jdbc.oracle.OracleDriver\ncom.l7tech.jdbc.sqlserver.SQLServerDriver
 jdbcConnection.driverClass.defaultList.clusterProperty=jdbcConnection.driverClass.defaultList
 
 builtinService.snmpQuery.enabled.description=Enable/disable the built-in service, "HTTP-based SNMP query service" (true/false; default true)
