--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
@@ -45,7 +45,6 @@ confirmation.remove.additional.property=Are you sure you want to remove the addi
 
 message.testing.jdbc.conn.passed=JDBC connection testing passed.
 message.testing.jdbc.conn.failed=Testing failed: {0}
+message.testing.progress=Testing Connection
+message.testing=Testing...
 label.showPassword=Show Password
-
-message.testing.cancel.title = Testing JDBC Connection
-message.testing.cancel.message = Testing JDBC connection, please wait ...
