SSG-5533: The "pkix.useDefaultTrustAnchors=true" cluster property setting now works even when the Gateway is using RSA SSL-J as its default TLS provider.  The default value for this setting has been changed to "false" to err on the side of security (failing closed) with the upgrade and going forward.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31037 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1057,7 +1057,7 @@ pkixValidation.other.clusterProperty = pkix.validation.other
 pkixValidation.other.validation.regex = validate|validatepath|revocation
 
 pkixTrust.useDefaultAnchors.description = Should well known Certificate Authorities be included as Trust Anchors (true/false)
-pkixTrust.useDefaultAnchors.default = true
+pkixTrust.useDefaultAnchors.default = false
 pkixTrust.useDefaultAnchors.clusterProperty = pkix.useDefaultTrustAnchors
 pkixTrust.useDefaultAnchors.validation.regex = ${regex.boolean}
 
