add the new database files to the deploy directory
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31098 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -3264,7 +3264,7 @@
                 <!-- Copy misc. stuff -->
                 <copy todir="@{dir}/${install.src.ssg.sql}">
                     <fileset dir="${src.root}/etc/db/${database.type}">
-                        <include name="ssg.sql"/>
+                        <include name="ssg*.sql"/>
                         <include name="upgrade*.sql"/>
                     </fileset>
                 </copy>
