--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
@@ -7,7 +7,7 @@ dialog.title.error.saving.conn=Error Saving JDBC Connection
 dialog.title.jdbc.conn.test=JDBC Connection Test
 
 panelTitle.basic.connection.config=Basic Connection Configuration
-panelTitle.c3p0.pool.config=C3P0 Pool Configuration
+panelTitle.c3p0.pool.config=Pool Configuration
 panelTitle.additional.connection.props=Additional Properties
 
 property.driver.class=Driver Class
@@ -27,7 +27,7 @@ label.minPoolSize=Minimum Pool Size:
 label.maxPoolSize=Maximum Pool Size:
 
 warning.basic.conn.prop.configured={0} has been configured in Basic Connection Configuration.
-warning.c3p0.pool.prop.configured={0} has been configured in C3P0 Pool Configuration.
+warning.c3p0.pool.prop.configured={0} has been configured in Pool Configuration.
 warning.minpoolsize.greaterthan.maxpoolsize=Minimum Pool Size must not be greater than Maximum Pool Size.
 warning.message.duplicated.property=Property, {0} already exists.  Try other property.
 
@@ -48,3 +48,10 @@ message.testing.jdbc.conn.failed=Testing failed: {0}
 message.testing.progress=Testing Connection
 message.testing=Testing...
 label.showPassword=Show Password
+
+# driver descriptions
+com.mysql.jdbc.Driver=Supports MySQL Community database
+com.l7tech.jdbc.mysql.MySQLDriver=Supports MySQL Enterprise database version 5.0.x, 5.1
+com.l7tech.jdbc.db2.DB2Driver=Supports IBM DB2 UDB on:  Linux, Unix, and Windows - 7.x, 8.x, V9.1 V9.5, V9.7 z/OS - 7.x, 8.x, V9.1 iSeries (AS/400) - V5R1, V5R2, V5R3, V5R4, V6R1
+com.l7tech.jdbc.oracle.OracleDriver=Supports Oracle versions 11.1, 11.2, 10.1, 10.2, 9.1, 9.2, 8.1.6 and 8.1.7
+com.l7tech.jdbc.sqlserver.SQLServerDriver=Supports Microsoft SQL Server 7, 2000, 2005, and 2008
