g FR-307: better description and tooltip values
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31195 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
@@ -50,8 +50,14 @@ message.testing=Testing...
 label.showPassword=Show Password
 
 # driver descriptions
-com.mysql.jdbc.Driver=Supports MySQL Community database
-com.l7tech.jdbc.mysql.MySQLDriver=Supports MySQL Enterprise database version 5.0.x, 5.1
-com.l7tech.jdbc.db2.DB2Driver=Supports IBM DB2 UDB on:  Linux, Unix, and Windows - 7.x, 8.x, V9.1 V9.5, V9.7 z/OS - 7.x, 8.x, V9.1 iSeries (AS/400) - V5R1, V5R2, V5R3, V5R4, V6R1
-com.l7tech.jdbc.oracle.OracleDriver=Supports Oracle versions 11.1, 11.2, 10.1, 10.2, 9.1, 9.2, 8.1.6 and 8.1.7
-com.l7tech.jdbc.sqlserver.SQLServerDriver=Supports Microsoft SQL Server 7, 2000, 2005, and 2008
+com.mysql.jdbc.Driver.description=Supports MySQL Community Edition
+com.mysql.jdbc.Driver.tooltip=
+com.l7tech.jdbc.mysql.MySQLDriver.description=Supports MySQL Enterprise Edition
+com.l7tech.jdbc.mysql.MySQLDriver.tooltip=Supported versions: 5.0.x and 5.1
+com.l7tech.jdbc.db2.DB2Driver.description=Supports IBM DB2 UDB
+com.l7tech.jdbc.db2.DB2Driver.tooltip=Supported versions: Linux, Unix, and Windows - 7.x, 8.x, V9.1 V9.5, V9.7 z/OS - 7.x, 8.x, V9.1 iSeries (AS/400) - V5R1, V5R2, V5R3, V5R4, V6R1
+com.l7tech.jdbc.oracle.OracleDriver.description=Supports Oracle Database
+com.l7tech.jdbc.oracle.OracleDriver.tooltip=Supported versions: 11.1, 11.2, 10.1, 10.2, 9.1, 9.2, 8.1.6 and 8.1.7
+com.l7tech.jdbc.sqlserver.SQLServerDriver.description=Supports Microsoft SQL Server
+com.l7tech.jdbc.sqlserver.SQLServerDriver.tooltip=Supported versions: 7, 2000, 2005, and 2008
+custom.driver.description=Custom driver
