bug 11441: The "Look Up Trusted Certificate" assertion can now look up any certificate known to the Gateway by its ThumbprintSHA1, SKI, Issuer/Serial, or subject DN.  This includes trusted certs, private key subject certs, user certs, and LDAP certs (if enabled0.  The values can be specified from context variables and needn't be known until runtime (though some format conversion may be required).  The ThumbprintSHA1 and SKI are expected to be Base-64 strings.  The issuer and subject DNs will be converted to RFC 2253 canonical form before the lookup is attempted.  The serial number is expected to be represented as a decimal number.
The assertion continues to be able to look up Trusted Certificate entities by their entity name (GUI alias), as it did before.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31243 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog.properties
@@ -1,5 +1,5 @@
 # Resource bundle for Look Up Trusted Certificate properties dialog
 
-name.label=&Name:
+name.label=Certificate &Name\:
 allow-multiple.label=&Fail if multiple certificates are found
-variable-name.label=&Variable Name:
+variable-name.label=Output &Variable Name\:
