ug EM-773: fixed by removing incorrect hourly retention period calculation from determination of which resolution to use. Hourly resolution is now always used when it is needed and never when it is not.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31273 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/skunkworks/src/main/resources/com/l7tech/skunkworks/standardreports/test/testdata.properties
+++ b/modules/skunkworks/src/main/resources/com/l7tech/skunkworks/standardreports/test/testdata.properties
@@ -40,16 +40,26 @@ AUTH_USER_1=Stan
 AUTH_USER_2=Peter
 
 #Services to create test data for
+# localhost
 SERVICE_ID_TO_NAME_1=Warehouse1 [/w1]
-SERVICE_ID_TO_NAME_OID_1=229376
+SERVICE_ID_TO_NAME_OID_1=88768515
 SERVICE_ID_TO_NAME_2=Warehouse2 [/w2]
-SERVICE_ID_TO_NAME_OID_2=229377
+SERVICE_ID_TO_NAME_OID_2=88768516
 SERVICE_ID_TO_NAME_3=Warehouse3 [/w3]
-SERVICE_ID_TO_NAME_OID_3=786432
-SERVICE_ID_TO_NAME_4=Warehouse4 [/w4]
-SERVICE_ID_TO_NAME_OID_4=786433
-SERVICE_ID_TO_NAME_5=Warehouse5 [/w5]
-SERVICE_ID_TO_NAME_OID_5=786434
+SERVICE_ID_TO_NAME_OID_3=88768517
+
+# daesm62s
+#SERVICE_ID_TO_NAME_1=Warehouse1 [/w1]
+#SERVICE_ID_TO_NAME_OID_1=2392065
+#SERVICE_ID_TO_NAME_2=Warehouse2 [/w2]
+#SERVICE_ID_TO_NAME_OID_2=2392066
+#SERVICE_ID_TO_NAME_3=Warehouse3 [/w3]
+#SERVICE_ID_TO_NAME_OID_3=2392067
+
+#SERVICE_ID_TO_NAME_4=Warehouse4 [/w4]
+#SERVICE_ID_TO_NAME_OID_4=786433
+#SERVICE_ID_TO_NAME_5=Warehouse5 [/w5]
+#SERVICE_ID_TO_NAME_OID_5=786434
 
 #Used by CheckTestData
 MAPPING_KEY_1=IP_ADDRESS
