SSM-3482: fixed by including the selected multivalued rule to the assertion record/title in SSM policy
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31283 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/ComparisonAssertion/src/main/resources/com/l7tech/external/assertions/comparison/ComparisonAssertion.properties
+++ b/modules/gateway/assertions/ComparisonAssertion/src/main/resources/com/l7tech/external/assertions/comparison/ComparisonAssertion.properties
@@ -138,3 +138,10 @@ multivaluedComparison.FAIL.label = Fail assertion
 regexPredicate.desc = matches {0}
 regexPredicate.negatedDesc = does not match {0}
 multivalued.label=&If Multivalued:
+
+multivaluedComparison.label = If Multivalued
+multivaluedComparison.ALL.text = all values must pass
+multivaluedComparison.ANY.text = any value must pass
+multivaluedComparison.FIRST.text = compare first value only
+multivaluedComparison.LAST.text = compare last value only
+multivaluedComparison.FAIL.text = fail assertion
