--- a/modules/common/ivy.xml
+++ b/modules/common/ivy.xml
@@ -14,11 +14,12 @@
     </publications>
     <dependencies>
         <dependency name="layer7-utility" rev="latest.integration" conf="core;test"/>
+        <dependency name="layer7-ntlm" rev="latest.integration" conf="core;test"/>
         <dependency name="layer7-test" rev="latest.integration" conf="test"/>
         <dependency org="apache-harmony" name="apache-harmony-asn1" rev="0.1" force="true" conf="core"/>
         <dependency org="bouncycastle" name="bcprov-jdk16" rev="1.46" force="true" conf="core"/>
         <dependency org="commons-collections" name="commons-collections" rev="3.2.1" force="true" conf="core"/>
-        <dependency org="commons-httpclient" name="commons-httpclient" rev="3.1" force="true" conf="core">
+       <dependency org="commons-httpclient" name="commons-httpclient" rev="3.1" force="true" conf="core">
             <exclude org="junit" module="junit" name="*" type="*" ext="*" conf="" matcher="exact"/>
         </dependency>
         <dependency org="commons-lang" name="commons-lang" rev="2.6" force="true" conf="core"/>
