--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -67,7 +67,7 @@
         <dependency name="UUIDGeneratorAssertion" rev="latest.integration" conf="module"/>
         <dependency name="SshAssertion" rev="latest.integration" conf="module"/>
         <dependency name="MqNativeAssertion" rev="latest.integration" conf="module"/>
-
+        <dependency name="GenerateHashAssertion" rev="latest.integration" conf="module"/>
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
     </dependencies>
