SSG-3781: Implemented Extraction of the Kerberos authorization info from the Kerberos ticket; kerberos.data context variable can be set in Require Windows Integrated  Authentication Credentials, Require WS-Security kerberos Token Profile Credentials and Route via HTTP(S) assertions if the kerberos ticket contains authorization data
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31350 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/kerberos/ivy.xml
+++ b/modules/kerberos/ivy.xml
@@ -13,5 +13,7 @@
     </publications>
     <dependencies>
         <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
+        <!--<dependency org="bouncycastle" name="bcprov-jdk16" rev="1.46" force="true" conf="core"/>-->
+	    <dependency org="org.jaaslounge" name="jaaslounge-decoding" rev="0.1.3" force="true" conf="core"/>
     </dependencies>
 </ivy-module>
