--- a/modules/kerberos/ivy.xml
+++ b/modules/kerberos/ivy.xml
@@ -10,10 +10,12 @@
     </configurations>
     <publications>
         <artifact name="layer7-kerberos" type="jar" ext="jar" conf="master"/>
+        <artifact name="layer7-kerberos-test" type="jar" ext="jar" conf="test"/>
     </publications>
     <dependencies>
         <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
         <!--<dependency org="bouncycastle" name="bcprov-jdk16" rev="1.46" force="true" conf="core"/>-->
 	    <dependency org="org.jaaslounge" name="jaaslounge-decoding" rev="0.1.3" force="true" conf="core"/>
+        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
