g FR-260: Implemented inbound NTLM authentication. Added Require NTLM assertion to the access control group. Modified LDAP identity provider to include NTLM connection properties so they can be used in Require NTLM assertion
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31366 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -154,6 +154,8 @@ advancedConfiguration.attrs.edit.title=Edit Attribute
 advancedConfiguration.attrs.prompt=Attribute:
 advancedConfiguration.group.caseInsensitiveMembership=&Use case insensitive group membership check
 advancedConfiguration.max.cache.age.error=Cache maximum age should not exceed 100 years.
+advancedConfiguration.ntlm.propertyTable.col.0=Name
+advancedConfiguration.ntlm.propertyTable.col.1=Value
 upButton.label=Move &Up
 downButton.label=Move &Down
 addButton.label=&Add
