--- a/modules/kerberos/ivy.xml
+++ b/modules/kerberos/ivy.xml
@@ -14,7 +14,7 @@
     </publications>
     <dependencies>
         <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
-        <!--<dependency org="bouncycastle" name="bcprov-jdk16" rev="1.46" force="true" conf="core"/>-->
+            <dependency org="bouncycastle" name="bcprov-jdk16" rev="1.46" force="true" conf="core"/>
 	    <dependency org="org.jaaslounge" name="jaaslounge-decoding" rev="0.1.3" force="true" conf="core"/>
         <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
     </dependencies>
