g FR-260: Added new NTLM Configuration step in the LDAP wizard. Service password can be stored securely using Manage Stored Passwords dialog. Fixed an issue with ServerNtlmAuthenticationAssertion not resetting ThreadLocal variable when the connection ID changes.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31430 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -154,8 +154,13 @@ advancedConfiguration.attrs.edit.title=Edit Attribute
 advancedConfiguration.attrs.prompt=Attribute:
 advancedConfiguration.group.caseInsensitiveMembership=&Use case insensitive group membership check
 advancedConfiguration.max.cache.age.error=Cache maximum age should not exceed 100 years.
-advancedConfiguration.ntlm.propertyTable.col.0=Name
-advancedConfiguration.ntlm.propertyTable.col.1=Value
+
+ntlmConfiguration.step.label=NTLM Configuration
+ntlmConfiguration.step.description=Configure NTLM settings in the LDAP Identity Provider.
+ntlmConfiguration.service.password.errors.empty=The password is required
+ntlmConfiguration.ntlm.propertyTable.col.0=Name
+ntlmConfiguration.ntlm.propertyTable.col.1=Value
+
 upButton.label=Move &Up
 downButton.label=Move &Down
 addButton.label=&Add
