Starting work on embedded Derby database, based on Steve's work in the rel6_1_5_derby branch.
SSG Derby support currently requires a hand-maintained ssg_embedded.sql file containing the database.  This is due to a Hibernate issue with cascading delete with @CollectionOfElements that is tracked in their JIRA as "ANN-747".  Hand-maintaining two SSG SQL files is not considered to be an acceptable solution for Fangtooth and will be replaced with something better (one way or another) before the release ships.

The Gateway creates an embedded database in Gateway/node/default/var/db/ on startup, if it isn't already present.

When using Derby a different spring configuration is used that does not use C3P0 (or require a database username/password).

Hibernate mappings for group memberships are altered to prevent generation of SQL that attempts to compare strings with integers: group and user IDs in GroupMembership are now represented in code as longs instead of strings.  

ESM utility code for managing the Derby embedded DB have been promited to  layer7-gateway-server so the Gateway can use it as well.

Hibernate mappings referring to fields named "xml" have been quoted to avoid conflicts with the Derby keyword "xml".

Config wizard option groups can now be marked as "optional".  It is possible to skip the entire MySQL database setup portion of Gateway configuration menu in which case the Gateway will use an embedded Derby database instead (and will run with a reduced feature set).
  
  There are a number of limitations when the Gateway is run with an embedded Derby database:
  
  * No clustering (obviously): It is not possible to join such a Gateway node into a cluster.
  
  * Sjones noted that "The configured SSM administrative account and the cluster hostname are currently ignored when using an embedded database," but I have not confirmed what is meant by this.
  
  * Audit archiving and Service metrics are disabled when using an embedded database.
  
  * Backup and resto

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
@@ -44,6 +44,12 @@ l7.mysql.main.connection.url = jdbc:mysql://${node.db.config.main.host}:${node.d
 l7.mysql.failover.connection.url = jdbc:mysql://${node.db.config.failover.host}:${node.db.config.failover.port}/${node.db.config.main.name}?${l7.mysql.url.parameters}
 l7.mysql.connection.driver_class = com.mysql.jdbc.Driver
 l7.mysql.dialect = com.l7tech.server.util.MySQL5InnoDBDialectWithSeq
+l7.mysql.globally_quoted_identifiers =
+
+# Derby specific properties
+l7.derby.connection.driver_class = org.apache.derby.jdbc.Driver40
+l7.derby.dialect = com.l7tech.server.util.ExtendedDerbyDialect
+l7.derby.globally_quoted_identifiers = xml
 
 #
 # Commonly customized settings
@@ -53,6 +59,7 @@ hibernate.connection.driver_class = ${l7.${node.db.type}.connection.driver_class
 hibernate.connection.url = ${l7.${node.db.type}.connection.url}
 hibernate.connection.username = ${node.db.config.main.user}
 hibernate.connection.password = ${node.db.config.main.pass}
+hibernate.globally_quoted_identifiers = ${l7.${node.db.type}.globally_quoted_identifiers}
 
 #
 # Database monitoring specific properties
