--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -57,6 +57,7 @@
         </dependency>
         <dependency org="cglib" name="cglib-nodep" rev="2.2" force="true" conf="core"/>
         <dependency org="c3p0" name="c3p0" rev="0.9.1.2" force="true" conf="core"/>
+        <dependency org="org.apache.derby" name="derby" rev="10.7.1.1" force="true" conf="core"/>
         <dependency org="org.hibernate" name="hibernate-core" rev="3.6.1.Final" force="true" conf="core"/>
         <dependency org="org.hibernate" name="hibernate-commons-annotations" rev="3.2.0.Final" force="true" conf="core"/>
         <dependency org="org.hibernate" name="hibernate-validator" rev="4.1.0.Final" force="true" conf="core">
