Added NtlmAuthentication assertion to the production configuration.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31636 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -70,6 +70,7 @@
         <dependency name="GenerateHashAssertion" rev="latest.integration" conf="module"/>
         <dependency name="EvaluateJsonPathExpressionAssertion" rev="latest.integration" conf="module"/>
         <dependency name="LookupDynamicContextVariablesAssertion" rev="latest.integration" conf="module"/>
+        <dependency name="NtlmAuthenticationAssertion" rev="latest.integration" conf="module"/>
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
     </dependencies>
