SSG-5687: renaming from GenerateHashAssertion to GenerateSecurityHashAssertion.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31641 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -67,7 +67,7 @@
         <dependency name="UUIDGeneratorAssertion" rev="latest.integration" conf="module"/>
         <dependency name="SshAssertion" rev="latest.integration" conf="module"/>
         <dependency name="MqNativeAssertion" rev="latest.integration" conf="module"/>
-        <dependency name="GenerateHashAssertion" rev="latest.integration" conf="module"/>
+        <dependency name="GenerateSecurityHashAssertion" rev="latest.integration" conf="module"/>
         <dependency name="EvaluateJsonPathExpressionAssertion" rev="latest.integration" conf="module"/>
         <dependency name="LookupDynamicContextVariablesAssertion" rev="latest.integration" conf="module"/>
         <dependency name="NtlmAuthenticationAssertion" rev="latest.integration" conf="module"/>
