--- a/modules/gateway/assertions/GenerateSecurityHashAssertion/ivy.xml
+++ b/modules/gateway/assertions/GenerateSecurityHashAssertion/ivy.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="1.0">
 	<info organisation="com.l7tech"
-		module="GenerateHashAssertion"
+		module="GenerateSecurityHashAssertion"
         status="integration"
 	>
 	</info>
@@ -16,7 +16,7 @@
         <conf name="client" description="Client assertion"/>
 	</configurations>
 	<publications>
-		<artifact name="GenerateHashAssertion" type="aar" ext="aar" conf="master"/>
+		<artifact name="GenerateSecurityHashAssertion" type="aar" ext="aar" conf="master"/>
 	</publications>
 	<dependencies>
         <dependency name="layer7-modular-assertions" rev="latest.integration" force="true"
