--- a/modules/skunkworks/ivy.xml
+++ b/modules/skunkworks/ivy.xml
@@ -36,11 +36,11 @@
                     conf="optional->compile(*),master(*)"/>
         <dependency org="org.springframework" name="spring-test" rev="3.0.5.RELEASE" force="true" conf="core"/>
         <dependency org="jasperreports" name="jasperreports" rev="3.1.2-p1" force="true" conf="core"/>
-        <dependency org="mysql" name="mysql-connector-java" rev="5.1.15" force="true" conf="core"/>
+        <dependency org="mysql" name="mysql-connector-java" rev="5.1.20" force="true" conf="core"/>
         <dependency org="commons-codec" name="commons-codec" rev="1.6" force="true" conf="core"/>
         <dependency org="org.scala-lang" name="scala-library" rev="2.9.1" force="true" conf="core"/>
         <dependency org="org.specs2" name="specs2_2.9.1" rev="1.5" force="true" conf="test"/>
-        <dependency org="org.mockito" name="mockito-core" rev="1.9.0-rc1" force="true" conf="test"/>
+        <dependency org="org.mockito" name="mockito-core" rev="1.9.0" force="true" conf="test"/>
 
         <exclude org="asm" module="asm" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
