ug FR-362: initial implementation of offbox audits.  Can create default audit sink/lookup policies and view from audit viewer
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31686 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -232,6 +232,11 @@ audit.sink.policy.guid.default =
 audit.sink.policy.guid.clusterProperty = audit.sink.policy.guid
 audit.sink.policy.guid.visible = false
 
+audit.lookup.policy.guid.description = GUID of internal policy to invoke when retrieving audit messages from an external source, or empty to use internal audit database (default=empty)
+audit.lookup.policy.guid.default =
+audit.lookup.policy.guid.clusterProperty = audit.lookup.policy.guid
+audit.lookup.policy.guid.visible = false
+
 audit.sink.alwaysSaveInternal.description = If true, audit records will always be saved to the internal database, even if they were successfully processed via a configured audit sink policy. (default=false)
 audit.sink.alwaysSaveInternal.default = false
 audit.sink.alwaysSaveInternal.clusterProperty = audit.sink.alwaysSaveInternal
