--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/PolicyPropertiesPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/PolicyPropertiesPanel.properties
@@ -6,4 +6,5 @@ nameRequiredError = Name is required for policy fragments
 typeRequiredError = Type is required
 unsaved.warning = <html>Unable to change policy properties while<br/>there are unsaved policy changes.<p>&nbsp;<p>
 auditsink.warning = <html>Unable to change policy properties for an audit sink policy.<p>&nbsp;<p>
+auditlookup.warning = <html>Unable to change policy properties for an audit lookup policy.<p>&nbsp;<p>
 debugtrace.warning = <html>Unable to change policy properties for a debug trace policy.<p>&nbsp;<p>
