Fixed some spelling errors in comments and property descriptions.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31737 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 #
 # Server Configuration Properties (used by ServerConfig)
 #
@@ -252,7 +253,7 @@ audit.sink.url.description = Default URL to which audit records will be posted v
 audit.sink.url.default = http://localhost:4680/
 audit.sink.url.clusterProperty = audit.sink.url
 
-audit.lockMessages.description = Should audit messges be locked after registration of known messages (boolean)
+audit.lockMessages.description = Should audit messages be locked after registration of known messages (boolean)
 audit.lockMessages.default = true
 audit.lockMessages.systemProperty = com.l7tech.gateway.common.audit.lockMessages
 
@@ -414,7 +415,7 @@ auditArchiverFtpFileprefix.description = The prefix for the audit archives file 
 auditArchiverFtpFileprefix.default = SSGAuditArchive-
 auditArchiverFtpFileprefix.clusterProperty = audit.archiver.ftp.fileprefix
 
-auditArchiverFtpMaxUploadFileSize.description = Maximum file size to be uploaded (bytes). Should be large enough to accomodate the largest audit record, and smaller than the FTP server's filesize limit, if any.
+auditArchiverFtpMaxUploadFileSize.description = Maximum file size to be uploaded (bytes). Should be large enough to accommodate the largest audit record, and smaller than the FTP server's filesize limit, if any.
 auditArchiverFtpMaxUploadFileSize.default = 2000000000
 auditArchiverFtpMaxUploadFileSize.clusterProperty = audit.archiver.ftp.maxfilesize
 auditArchiverFtpMaxUploadFileSize.validation.type = long
@@ -483,7 +484,7 @@ metricsFineInterval.clusterProperty = metrics.fineInterval
 metricsFineInterval.validation.type = long
 
 # passthrough filter for wsdl and policy downloads (requests for such documents will not require authentication
-# if they come from an ip address belowmentioned)
+# if they come from an ip address below mentioned)
 # for example, a value could look like "127.0.0.1 192.168" and would allow localhost as well as anything starting with 192.168
 passthroughDownloads.description = Remote IPs of requestors allowed to download WSDL and policy documents without credentials (Space separated list)
 passthroughDownloads.default = 127.0.0.1
@@ -843,7 +844,7 @@ ephemeralKeyMaxCacheEntries.systemProperty = ${propertyPrefix}.ekeycache.maxEntr
 ephemeralKeyMaxCacheEntries.clusterProperty = ekeycache.maxEntries
 ephemeralKeyMaxCacheEntries.validation.type = integer
 
-defaultfaultlevel.description = Level of details in SOAP faults returned by the SSG (can be overriden by FaultLevel assertion). Values are 0 for drop connection, 1 for template, 2 for generic, 3 for medium details, 4 for full details.
+defaultfaultlevel.description = Level of details in SOAP faults returned by the SSG (can be overridden by FaultLevel assertion). Values are 0 for drop connection, 1 for template, 2 for generic, 3 for medium details, 4 for full details.
 defaultfaultlevel.default = 2
 defaultfaultlevel.systemProperty = ${propertyPrefix}.fault.level
 defaultfaultlevel.clusterProperty = soapfault.level
@@ -891,7 +892,7 @@ uddi.timeout.description = IO timeout for UDDI response (Milliseconds)
 uddi.timeout.clusterProperty = uddi.timeout
 uddi.timeout.default = 60000
 uddi.timeout.validation.type = long
-uddi.wsdlpublish.maxretries.description = Maximum number of retry attemps when publishing Gateway WSDL information to UDDI
+uddi.wsdlpublish.maxretries.description = Maximum number of retry attempts when publishing Gateway WSDL information to UDDI
 uddi.wsdlpublish.maxretries.clusterProperty = uddi.wsdlpublish.maxretries
 uddi.wsdlpublish.maxretries.default = 3
 uddi.wsdlpublish.maxretries.validation.type = integer
@@ -1437,7 +1438,7 @@ logon.maxAllowableAttempts.default=5
 logon.maxAllowableAttempts.clusterProperty=logon.maxAllowableAttempts
 logon.maxAllowableAttempts.validation.type = integer
 
-logon.lockoutTime.description=The time interval that the locked account will have to wait before next possible login retry after lock out.  The default time is set to 1200 seconds (20mins).  Value should be entered in seconds.
+logon.lockoutTime.description=The time interval that the locked account will have to wait before next possible login retry after lock out.  The default time is set to 1200 seconds (20 min).  Value should be entered in seconds.
 logon.lockoutTime.default=1200
 logon.lockoutTime.clusterProperty=logon.lockoutTime
 logon.lockoutTime.validation.type = long
