--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1066,6 +1066,12 @@ pkixValidation.other.default = validate
 pkixValidation.other.clusterProperty = pkix.validation.other
 pkixValidation.other.validation.regex = validate|validatepath|revocation
 
+pkixTrust.useDefaultAnchors.description = Should well known Certificate Authorities be included as Trust Anchors (true/false)
+pkixTrust.useDefaultAnchors.default = false
+pkixTrust.useDefaultAnchors.clusterProperty = pkix.useDefaultTrustAnchors
+pkixTrust.useDefaultAnchors.validation.regex = ${regex.boolean}
+pkixTrust.useDefaultAnchors.visible = false
+
 pkixTrust.permittedCriticalExtensions.description = List of critical extensions that should be permitted when validating certificates (space separated list of OIDs)
 pkixTrust.permittedCriticalExtensions.default =
 pkixTrust.permittedCriticalExtensions.clusterProperty = pkix.permittedCriticalExtensions
