--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -42,7 +42,7 @@
         <!-- Dependencies -->
         <dependency org="com.l7tech.lib" name="layer7-sun-jaxws" rev="1.0" conf="core"/> <!-- should be before CXF in classpath -->
         <dependency org="antlr" name="antlr" rev="2.7.7-l7p1" force="true" conf="core"/>
-        <dependency org="com.jscape" name="sftp" rev="8.8.0" force="true" conf="core"/>
+        <dependency org="com.jscape" name="sftp" rev="8.8.1" force="true" conf="core"/>
         <dependency org="com.l7tech.lib" name="apache-cxf-lib" rev="2.3.10" force="true" conf="core"/>
         <dependency org="commons-configuration" name="commons-configuration" rev="1.8" force="true" conf="core">
             <exclude org="commons-digester" module="commons-digester" name="*" type="*" ext="*" conf=""
@@ -76,12 +76,12 @@
         <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.6.4" force="true" conf="core"/>
         <dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.6.4" force="true" conf="core"/>
         <dependency org="org.slf4j" name="log4j-over-slf4j" rev="1.6.4" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-jdbc" rev="3.0.5.RELEASE" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-orm" rev="3.0.5.RELEASE" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-context-support" rev="3.0.5.RELEASE" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-tx" rev="3.0.5.RELEASE" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-web" rev="3.0.5.RELEASE" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-webmvc" rev="3.0.5.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-jdbc" rev="3.0.7.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-orm" rev="3.0.7.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-context-support" rev="3.0.7.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-tx" rev="3.0.7.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-web" rev="3.0.7.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-web-servlet" rev="3.0.7.RELEASE" force="true" conf="core"/>
         <dependency org="org.aspectj" name="aspectjweaver" rev="1.6.12" force="true" conf="core"/> <!-- Used for parsing pointcut expressions only -->
         <dependency org="org.apache.ftpserver" name="ftpserver-parent" rev="1.0-543677-20070601" force="true"
                     conf="core"/>
@@ -112,7 +112,7 @@
         <dependency org="org.apache.cxf" name="cxf-rt-transports-local" rev="2.3.10" force="true" conf="test"/>
         <!-- apacheds-server-integ is used for LdapIdentityProviderTest but not currently in our repository -->
         <!--<dependency org="org.apache.directory.server" name="apacheds-server-integ" rev="1.5.5" force="true" conf="test"/>-->
-        <dependency org="org.springframework" name="spring-test" rev="3.0.5.RELEASE" force="true" conf="test"/>
+        <dependency org="org.springframework" name="spring-test" rev="3.0.7.RELEASE" force="true" conf="test"/>
        
         <!-- Exclusions --> 
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
