--- a/build.xml
+++ b/build.xml
@@ -3266,6 +3266,7 @@
                     <fileset dir="${src.root}/etc/db/${database.type}">
                         <include name="ssg*.sql"/>
                         <include name="upgrade*.sql"/>
+                        <include name="externalAudits*.sql"/>
                     </fileset>
                 </copy>
 
