--- a/modules/ntlm/ivy.xml
+++ b/modules/ntlm/ivy.xml
@@ -18,6 +18,13 @@
         <dependency name="jcifs" rev="1.3.17" org="jcifs" force="true" conf="core">
             <exclude org="junit" module="junit" name="*" type="*" ext="*" conf="" matcher="exact"/>
         </dependency>
+        <dependency org="ch.poweredge.ntlmv2-auth" name="ntlmv2-lib" rev="1.0.4" conf="core"/>
+        <dependency org="org.slf4j" name="slf4j-api" rev="1.6.5" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.6.5" force="true" conf="core"/>
+        <dependency org="javax.servlet" name="servlet-api" rev="2.5" force="true" conf="core"/>
+
         <dependency name="junit" rev="4.10" org="junit" conf="test"/>
+
+        <!--<conflict org="org.slf4j" module="slf4j-api" rev="1.6.4"/>-->
     </dependencies>
 </ivy-module>
