SSG-5599, 5783 : Enhance SSG to support multiple Kerberos principals, and resolve SPN with https service
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31810 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -113,7 +113,8 @@
         <!-- apacheds-server-integ is used for LdapIdentityProviderTest but not currently in our repository -->
         <!--<dependency org="org.apache.directory.server" name="apacheds-server-integ" rev="1.5.5" force="true" conf="test"/>-->
         <dependency org="org.springframework" name="spring-test" rev="3.0.7.RELEASE" force="true" conf="test"/>
-       
+        <dependency name="layer7-kerberos" rev="latest.integration" conf="test"/>
+
         <!-- Exclusions --> 
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="com.sun.xml.fastinfoset" module="FastInfoset" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
