Initial implementation of [1]. New Date/Time variable type and selector for suffixes. gateway.time and request.time are now treated as date/time variables. New runtime cluster property to configure date formats which gateway recognizes. New timezone suffixes and comparison assertion enhancements not implemented yet. Deprecated ISO8601Date as JDK7 can now parse ISO8601 time zones. Deleted TimeVariableUtils as no more usages. Added test coverage for new and existing behavior.
Simplified some functional text / collection processing in SimplePropertyChangeHandler. Added test coverage for content type headers and date configuration.

[1] - http://sarek/mediawiki/index.php?title=Fangtooth_Date_Time_Enhancements

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@31814 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1872,6 +1872,15 @@ db.replicationErrorAuditInterval.default = 60m
 db.replicationErrorAuditInterval.clusterProperty = db.replicationErrorAuditInterval
 db.replicationErrorAuditInterval.validation.type = timeUnit
 
+datetime.customFormats.description=Custom Date/Time input format values separated by semicolon
+datetime.customFormats.default=
+datetime.customFormats.clusterProperty = datetime.customFormats
+
+datetime.autoFormats.description=Simple Date Formats followed by a space then the Regular Expression that will match it. All expressions must begin with ^ and end with $
+datetime.autoFormats.default=yyyy-MM-dd'T'HH:mm:ss.SSSX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{3}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$ yyyy-MM-dd'T'HH:mm:ss.SSX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{2}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$ yyyy-MM-dd'T'HH:mm:ss.SX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{1}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$ yyyy-MM-dd'T'HH:mm:ssX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$ yyyy-MM-dd'T'hh:mmX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$ yyyy-MM-dd ^\\d{4}-\\d{2}-\\d{2}$ yyyy-MM ^\\d{4}-\\d{2}$ yyyy ^\\d{4}$ EEE, dd MMM yyyy HH:mm:ss z ^[a-zA-Z]{3},\\s\\d{2}\\s[a-zA-Z]{3}\\s\\d{4}\\s\\d{2}:\\d{2}:\\d{2}\\s(?:[a-zA-Z]{3}|(?:\\+|-)\\d{4})$ EEE, dd MMM yy HH:mm:ss Z ^[a-zA-Z]{3},\\s\\d{2}\\s[a-zA-Z]{3}\\s\\d{2}\\s\\d{2}:\\d{2}:\\d{2}\\s(?:[a-zA-Z]{3}|(?:\\+|-)\\d{4})$ EEE, dd-MMM-yy HH:mm:ss z ^(?:Monday|Tuesday|Wednesday|Thursday|Friday|Saturday|Sunday),\\s\\d{2}-[a-zA-Z]{3}-\\d{2}\\s\\d{2}:\\d{2}:\\d{2}\\s(?:[a-zA-Z]{3}|(?:\\+|-)\\d{4})$ EEE MMM dd HH:mm:ss yyyy ^[a-zA-Z]{3}\\s[a-zA-Z]{3}\\s(\\d{2}|\\s\\d)\\s\\d{2}:\\d{2}:\\d{2}\\s\\d{4}$
+datetime.autoFormats.clusterProperty = datetime.autoFormats
+datetime.autoFormats.visible = false
+
 commons.httpclient.ntlm.flags.description=NTLM negotiate flags in HEX. 0x0 sets to standard negotiate flags value. This property should be only used if the AD server performing NTLM authentication is so obscure that it doesn't support default NTLM settings. Please refer to NTLM spec (http://msdn.microsoft.com/en-us/library/cc236621%28v=PROT.13%29.aspx) about the flag value
 commons.httpclient.ntlm.flags.default=0x0
 commons.httpclient.ntlm.flags.clusterProperty = commons.httpclient.ntlm.flags
