--- a/modules/utility/ivy.xml
+++ b/modules/utility/ivy.xml
@@ -19,5 +19,6 @@
         <dependency org="javax.xml.soap" name="saaj-api" rev="1.3.1" force="true" conf="core"/>
         <dependency org="commons-codec" name="commons-codec" rev="1.6" force="true" conf="core"/>
         <dependency org="com.intellij" name="annotations" rev="11.1.2" force="true" conf="core"/>
+        <dependency org="commons-lang" name="commons-lang" rev="2.6" force="true" conf="core"/>
     </dependencies>
 </ivy-module>
