--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -96,7 +96,7 @@
         <dependency org="com.l7tech.ddtek" name="L7sqlserver" rev="4.2.1" force="true" conf="core"/>
 
         <!-- Optional dependencies -->
-        <dependency org="com.ibm.mq" name="mq6" rev="6.0.2.11" force="true" conf="optional"/>
+        <dependency org="com.ibm.mq" name="mq" rev="7.1.0.1" force="true" conf="optional"/>
         <dependency org="com.tarari" name="tarari-raxj" rev="4.4.3.31" force="true" conf="optional"/>
         <dependency org="com.tibco" name="jms" rev="1.5" force="true" conf="optional"/>
         <dependency org="fiorano" name="fmq-client" rev="1.0-4507" force="true" conf="optional"/>
