--- a/modules/skunkworks/ivy.xml
+++ b/modules/skunkworks/ivy.xml
@@ -25,7 +25,7 @@
         <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
         <dependency name="layer7-ems" rev="latest.integration" conf="core"/>
         <dependency org="antlr" name="antlr" rev="2.7.7-l7p1" force="true" conf="optional->compile(*),master(*)"/>
-        <dependency org="com.ibm.mq" name="mq6" rev="6.0.2.11" force="true" conf="optional->compile(*),master(*)"/>
+        <dependency org="com.ibm.mq" name="mq" rev="7.1.0.1" force="true" conf="optional->compile(*),master(*)"/>
         <dependency org="com.sun.japex" name="japex" rev="1.1" force="true" conf="core"/>
         <dependency org="com.sun.japex.jdsl" name="jdsl" rev="1.1" force="true" conf="core"/>
         <dependency org="com.sun.xml.fastinfoset" name="FastInfoset" rev="1.2.11" force="true" conf="core"/>
