ug FR-440: adding the ability to view the SSPC log from SSM.  fixed a typo in one of the method name (getFilepat should be getFilepath)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32020 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SinkConfigurationFilterSelectionDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SinkConfigurationFilterSelectionDialog.properties
@@ -11,6 +11,7 @@ filterType.IP.text=Client IP
 filterType.FOLDER.text=Folder
 filterType.POLICY.text=Policy
 categories.LOG.text=Gateway Log
+categories.SSPC.text=Process Controller Log
 categories.TRAFFIC.text=Traffic Log
 categories.AUDIT.text=Audits
 transport.EMAIL_LISTENER.text=Email Listener
