--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SinkConfigurationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SinkConfigurationPropertiesDialog.properties
@@ -29,6 +29,7 @@ baseSettings.categories.label=Selected &Categories:
 baseSettings.categories.tooltip=Selected categories will be output by this log sink.
 baseSettings.categories.filters.errors.empty=At least one category must be selected or one package specified.
 baseSettings.categories.LOG.text=Gateway Log
+baseSettings.categories.SSPC.text=Process Controller Log
 baseSettings.categories.TRAFFIC.text=Traffic Log
 baseSettings.categories.AUDIT.text=Audits
 baseSettings.filters.label=&Filters:
