fix for bug 12607 datetime.customFormats has a default value of built in supported formats. fix for  SSM-3955 datetime.customFormats and datetime.autoFormats are now formatted with new lines for readability.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32037 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1873,11 +1873,33 @@ db.replicationErrorAuditInterval.clusterProperty = db.replicationErrorAuditInter
 db.replicationErrorAuditInterval.validation.type = timeUnit
 
 datetime.customFormats.description=Custom Date/Time input format values separated by semicolon
-datetime.customFormats.default=
+datetime.customFormats.default=yyyy-MM-dd'T'HH:mm:ss.SSSXXX;\
+  \nyyyy-MM-dd'T'HH:mm:ss.SSXXX;\
+  \nyyyy-MM-dd'T'HH:mm:ss.SXXX;\
+  \nyyyy-MM-dd'T'HH:mm:ssXXX;\
+  \nyyyy-MM-dd'T'HH:mmXXX;\
+  \nyyyy-MM-dd;\
+  \nyyyy-MM;\
+  \nyyyy;\
+  \nEEE, dd MMM yyyy HH:mm:ss z;\
+  \nEEE, dd MMM yy HH:mm:ss Z;\
+  \nEEE, dd-MMM-yy HH:mm:ss z;\
+  \nEEE MMM dd HH:mm:ss yyyy
 datetime.customFormats.clusterProperty = datetime.customFormats
 
 datetime.autoFormats.description=Simple Date Formats followed by a space then the Regular Expression that will match it. All expressions must begin with ^ and end with $
-datetime.autoFormats.default=yyyy-MM-dd'T'HH:mm:ss.SSSXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{3}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$yyyy-MM-dd'T'HH:mm:ss.SSXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{2}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$yyyy-MM-dd'T'HH:mm:ss.SXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{1}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$yyyy-MM-dd'T'HH:mm:ssXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$yyyy-MM-dd'T'HH:mmXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$yyyy-MM-dd ^\\d{4}-\\d{2}-\\d{2}$ yyyy-MM ^\\d{4}-\\d{2}$ yyyy ^\\d{4}$ EEE, dd MMM yyyy HH:mm:ss z ^[a-zA-Z]{3},\\s\\d{2}\\s[a-zA-Z]{3}\\s\\d{4}\\s\\d{2}:\\d{2}:\\d{2}\\s(?:[a-zA-Z]{3}|(?:\\+|-)\\d{4})$ EEE, dd MMM yy HH:mm:ss Z ^[a-zA-Z]{3},\\s\\d{2}\\s[a-zA-Z]{3}\\s\\d{2}\\s\\d{2}:\\d{2}:\\d{2}\\s(?:[a-zA-Z]{3}|(?:\\+|-)\\d{4})$ EEE, dd-MMM-yy HH:mm:ss z ^(?:Monday|Tuesday|Wednesday|Thursday|Friday|Saturday|Sunday),\\s\\d{2}-[a-zA-Z]{3}-\\d{2}\\s\\d{2}:\\d{2}:\\d{2}\\s(?:[a-zA-Z]{3}|(?:\\+|-)\\d{4})$ EEE MMM dd HH:mm:ss yyyy ^[a-zA-Z]{3}\\s[a-zA-Z]{3}\\s(\\d{2}|\\s\\d)\\s\\d{2}:\\d{2}:\\d{2}\\s\\d{4}$
+datetime.autoFormats.default=yyyy-MM-dd'T'HH:mm:ss.SSSXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{3}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$\
+  \nyyyy-MM-dd'T'HH:mm:ss.SSXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{2}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$\
+  \nyyyy-MM-dd'T'HH:mm:ss.SXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\\.\\d{1}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$\
+  \nyyyy-MM-dd'T'HH:mm:ssXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$\
+  \nyyyy-MM-dd'T'HH:mmXXX ^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}(?:Z|(?:\\+|-)\\d{2}:\\d{2})$\
+  \nyyyy-MM-dd ^\\d{4}-\\d{2}-\\d{2}$\
+  \nyyyy-MM ^\\d{4}-\\d{2}$\
+  \nyyyy ^\\d{4}$\
+  \nEEE, dd MMM yyyy HH:mm:ss z ^[a-zA-Z]{3},\\s\\d{2}\\s[a-zA-Z]{3}\\s\\d{4}\\s\\d{2}:\\d{2}:\\d{2}\\s(?:[a-zA-Z]{3}|(?:\\+|-)\\d{4})$\
+  \nEEE, dd MMM yy HH:mm:ss Z ^[a-zA-Z]{3},\\s\\d{2}\\s[a-zA-Z]{3}\\s\\d{2}\\s\\d{2}:\\d{2}:\\d{2}\\s(?:[a-zA-Z]{3}|(?:\\+|-)\\d{4})$ \
+  \nEEE, dd-MMM-yy HH:mm:ss z ^(?:Monday|Tuesday|Wednesday|Thursday|Friday|Saturday|Sunday),\\s\\d{2}-[a-zA-Z]{3}-\\d{2}\\s\\d{2}:\\d{2}:\\d{2}\\s(?:[a-zA-Z]{3}|(?:\\+|-)\\d{4})$\
+  \nEEE MMM dd HH:mm:ss yyyy ^[a-zA-Z]{3}\\s[a-zA-Z]{3}\\s(\\d{2}|\\s\\d)\\s\\d{2}:\\d{2}:\\d{2}\\s\\d{4}$
 datetime.autoFormats.clusterProperty = datetime.autoFormats
 datetime.autoFormats.visible = false
 
