SSG-5823: fixed by adding 3 new formats for timestamps: <Timestamp>, <Millisecond Timestamp> and <Second Timestamp> to allow fine grained control over what is parsed. This could also be extended for the auto formats. Added test coverage.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32045 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1873,7 +1873,10 @@ db.replicationErrorAuditInterval.clusterProperty = db.replicationErrorAuditInter
 db.replicationErrorAuditInterval.validation.type = timeUnit
 
 datetime.customFormats.description=Custom Date/Time input format values separated by semicolon
-datetime.customFormats.default=yyyy-MM-dd'T'HH:mm:ss.SSSXXX;\
+datetime.customFormats.default=<Timestamp>;\
+  \n<Millisecond Timestamp>;\
+  \n<Second Timestamp>;\
+  \nyyyy-MM-dd'T'HH:mm:ss.SSSXXX;\
   \nyyyy-MM-dd'T'HH:mm:ss.SSXXX;\
   \nyyyy-MM-dd'T'HH:mm:ss.SXXX;\
   \nyyyy-MM-dd'T'HH:mm:ssXXX;\
