HybridStashManager disk thresholds are limited to int, so the validation should not permit long
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32058 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -448,14 +448,14 @@ attachmentDiskThreshold.description = Threshold for size of attachments in a sin
 attachmentDiskThreshold.default = 1048576
 attachmentDiskThreshold.systemProperty = ${propertyPrefix}.attachmentDiskThreshold
 attachmentDiskThreshold.clusterProperty = attachment.diskThreshold
-attachmentDiskThreshold.validation.type = long
+attachmentDiskThreshold.validation.type = integer
 
 # default = 9096
 messageCacheDiskThreshold.description = Threshold for size of messages to be cached on disk (Bytes)
 messageCacheDiskThreshold.default = 8096
 messageCacheDiskThreshold.systemProperty = ${propertyPrefix}.messageCacheDiskThreshold
 messageCacheDiskThreshold.clusterProperty = messageCache.diskThreshold
-messageCacheDiskThreshold.validation.type = long
+messageCacheDiskThreshold.validation.type = integer
 
 messageCacheResetGeneration.description = Incrementing the generation number clears all message caches created under a different generation number.
 messageCacheResetGeneration.default = 0
