SSG-5306: Resolved by adding HttpVersion ComboBox in assertion configuration.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32080 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
@@ -64,6 +64,9 @@ request.msgSrc.label.text = Request message source:
 request.msgSrc.default.text = Default Request
 request.msgSrc.contextVariable.format = Context Variable: {0}{1}{2}
 
+request.httpVersion.label.text = Version:
+request.httpVersion.default.text = Default
+
 response.msgDest.label.text = Response message destination:
 response.msgDest.default.text = Default response
 response.msgDest.variable.text = Save as context variable:
